--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,52 +1,215 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
 <!DOCTYPE html>
 <html lang="en">
-
-  <h1>Sensor 1</h1>
-    <div id="chart_div" style="width: 450px; height: 300px;"></div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sensor Console</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+</head>
+<style>
+  .card-body{
+    padding:0;
+  }
+</style>
+<body>
+    <div class="container mt-5" style = "max-width: fit-content;">
+        <!-- Row 1: Sensor title -->
+        <div class="row title-row">
+          <div class="col-12">
+              <h1 class="heading text-center">Sensor 1</h1>
+          </div>
+      </div>
         
+        <!-- Rows 2-5: 4 equally sized boxes -->
+        <div class="row">
+            <div class="col-3">
+                <div class="card" style="border:0">
+                    <div class="card-body" id = "methaneGauge">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card" style="border:0">
+                    <div class="card-body" id = "carbonGauge">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card" style="border:0">
+                    <div class="card-body" id = "aqGauge">
+                       
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card" style="border:0">
+                    <div class="card-body" id = "butaneGauge">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body" id = "methaneGraph">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body" id = "carbonGraph">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body" id = "aqGraph">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body" id = "butaneGraph">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        Sensor 9
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        Sensor 10
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        Sensor 11
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        Sensor 12
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        Sensor 13
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        Sensor 14
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        Sensor 15
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        Sensor 16
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
 </body>
+</html>
 <script>
     google.charts.load('current', {'packages':['gauge']});
     google.charts.setOnLoadCallback(drawChart);
     function drawChart() {
 
-var data = google.visualization.arrayToDataTable([
+var methdata = google.visualization.arrayToDataTable([
   ['Label', 'Value'],
-  ['CO', 30],
-  ['H2S', 5],
-  ['Methane', 100]
+  ['Methane', 102]
+]);
+var methoptions = {
+    min:0, max:10000,
+  width: 400, height: 140,
+  redFrom: 8000, redTo: 10000,
+  yellowFrom:1000, yellowTo: 8000,
+  minorTicks: 20
+};
+var carbondata = google.visualization.arrayToDataTable([
+  ['Label', 'Value'],
+  ['CO', 5]
+  
+]);
+var carboptions = {
+    min:0, max:1000,
+  width: 400, height: 140,
+  redFrom: 500, redTo: 1000,
+  yellowFrom:50, yellowTo: 500,
+  minorTicks: 20
+};
+var aqdata = google.visualization.arrayToDataTable([
+  ['Label', 'Value'],
+  ['Air Quality', 22]
+]);
+var aqoptions = {
+    min:0, max:1000,
+  width: 400, height: 140,
+  redFrom: 700, redTo: 1000,
+  yellowFrom:200, yellowTo: 700,
+  minorTicks: 20
+};
+var butdata = google.visualization.arrayToDataTable([
+  ['Label', 'Value'],
+  ['Butane', 33]
 ]);
 
-var options = {
-    min:0, max:200,
-  width: 400, height: 100,
-  redFrom: 100, redTo: 150,
-  yellowFrom:50, yellowTo: 100,
-  minorTicks: 5
+var butoptions = {
+    min:0, max:1600,
+  width: 400, height: 140,
+  redFrom: 1000, redTo: 1600,
+  yellowFrom:700, yellowTo: 1000,
+  minorTicks: 30
 };
 
-var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
+var methguage = new google.visualization.Gauge(document.getElementById('methaneGauge'));
+var carbguage = new google.visualization.Gauge(document.getElementById('carbonGauge'));
+var aqguage = new google.visualization.Gauge(document.getElementById('aqGauge'));
+var butguage = new google.visualization.Gauge(document.getElementById('butaneGauge'));
 
-chart.draw(data, options);
-
-setInterval(function() {
-  data.setValue(0, 1, 40 + Math.round(60 * Math.random()));
-  chart.draw(data, options);
-}, 13000);
-setInterval(function() {
-  data.setValue(1, 1, 40 + Math.round(60 * Math.random()));
-  chart.draw(data, options);
-}, 5000);
-setInterval(function() {
-  data.setValue(2, 1, 60 + Math.round(20 * Math.random()));
-  chart.draw(data, options);
-}, 26000);
-}
-
+methguage.draw(methdata, methoptions);
+carbguage.draw(carbondata, carboptions);
+aqguage.draw(aqdata, aqoptions);
+butguage.draw(butdata, butoptions);
+    }
 </script>
 </html>
