Added 24-Hour graph

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -68,28 +68,28 @@
             <div class="col-3">
                 <div class="card">
                     <div class="card-body" >
-                        <canvas id = "methaneGraph" width="800" height="800"></canvas>
+                        <canvas id = "methaneGraph_1h" width="800" height="800"></canvas>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
                     <div class="card-body" >
-                        <canvas id = "carbonGraph" width="800" height="800"></canvas>
+                        <canvas id = "carbonGraph_1h" width="800" height="800"></canvas>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
                     <div class="card-body" >
-                        <canvas id = "aqGraph" width="800" height="800"></canvas>
+                        <canvas id = "aqGraph_1h" width="800" height="800"></canvas>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
                     <div class="card-body" >
-                        <canvas id = "butaneGraph" width="800" height="800"></canvas>
+                        <canvas id = "butaneGraph_1h" width="800" height="800"></canvas>
                     </div>
                 </div>
             </div>
@@ -99,28 +99,28 @@
             <div class="col-3">
                 <div class="card">
                     <div class="card-body">
-                        Sensor 9
+                        <canvas id = "methaneGraph_24h" width="800" height="800"></canvas>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
                     <div class="card-body">
-                        Sensor 10
+                        <canvas id = "carbonGraph_24h" width="800" height="800"></canvas>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
                     <div class="card-body">
-                        Sensor 11
+                        <canvas id = "aqGraph_24h" width="800" height="800"></canvas>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card">
                     <div class="card-body">
-                        Sensor 12
+                        <canvas id = "butaneGraph_24h" width="800" height="800"></canvas>
                     </div>
                 </div>
             </div>
