--- a/templates/testhome.html
+++ b/templates/testhome.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Layout</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
@@ -16,8 +19,12 @@
     .range-container {
             padding: 20px;
         }
+    input{
+        width:80%;
+    }
 </style>
 <!-- Top row: header -->
+<div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 11"></div>
 <div class="row">
     <div class="col-12 bg-primary text-white">
         <h1 class="text-center">Gas Sensor Dashboard</h1>
@@ -95,12 +102,37 @@
     return number < 10 ? '0' + number : number;
 }
 
+function createAlertToast (title, body)
+            {
+                var toastHTML = `
+                    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <strong class="me-auto">${title}</strong>
+                        <small class="text-muted">just now</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        ${body}
+                    </div>
+                    </div>
+                `;
+                var $toast = $(toastHTML);
+                $('#toast-container').append($toast);
+
+                var toast = new bootstrap.Toast($toast[0], {
+                    autohide: true,
+                    delay: 5000
+                });
+
+                toast.show();
+            }
+
     function setLocalTime(){
         let now = new Date();
         let currentTime = now.toLocaleTimeString('en-US', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
 
         $("#localTime").text('Current Time: ' + currentTime);
     }
-
+    createAlertToast("Carbon Monoxide Warning!", "Carbon monoxide has reached dangerous levels in sensor 1!");
     setInterval(setLocalTime, 1000);
 </script>
