--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Login</h5>
-                        <form action = 'http://127.0.0.1:2300/login' method="post">
+                        <form action = "{{ url_for('login') }}" method="post">
                             <div class="form-group">
                                 <label for="username">Username</label>
                                 <input type="text" class="form-control" name='user' id="username" placeholder="Enter username">
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <form id = "registerForm" display = "none" action = "http://127.0.0.1:2300/registerPage"></form>
+    <form id = "registerForm" display = "none" action = "{{ url_for('register') }}"></form>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
