--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sensor Console</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="{{ url_for('static', filename='javascript/gaugeFunctions.js') }}" type='text/javascript'></script>  
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{{ url_for('static', filename='javascript/gaugeFunctions.js') }}" type='text/javascript'></script>  
   
   
 </head>
@@ -26,7 +24,7 @@
     display:inline-block;
   }
 </style>
-<body>
+<div style='width:900px;height:500px; background-color:white'>
     <div class="container mt-5" style = "max-width: fit-content;">
         <!-- Row 1: Sensor title -->
         <div class="row title-row">
@@ -160,7 +158,7 @@
             </div>
         </div>
     </div>
-</body>
+</div>
 <script src="{{ url_for('static', filename='javascript/graphFunctions.js') }}" type='text/javascript'></script>
 <script>
 
