--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
     display:inline-block;
   }
 </style>
-<div style='width:900px;height:500px; background-color:white'>
+<!-- <div style='width:900px;height:500px; background-color:white'> -->
     <div class="container mt-5" style = "max-width: fit-content;">
         <!-- Row 1: Sensor title -->
         <div class="row title-row">
@@ -158,7 +158,7 @@
             </div>
         </div>
     </div>
-</div>
+<!-- </div> -->
 <script src="{{ url_for('static', filename='javascript/graphFunctions.js') }}" type='text/javascript'></script>
 <script>
 
