--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,6 +23,10 @@
   table{
     display:inline-block;
   }
+  body {
+    width: 100%;
+    height: 100%;
+  }
 </style>
 <!-- <div style='width:900px;height:500px; background-color:white'> -->
     <div class="container mt-5" style = "max-width: fit-content;">
