--- a/templates/testhome.html
+++ b/templates/testhome.html
@@ -26,7 +26,7 @@
 <!-- Top row: header -->
 <div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index: 11"></div>
 <div class="row">
-    <div class="col-12 bg-primary text-white">
+    <div class="col-12 bg text-white" style="background-color: #1c4e80">
         <h1 class="text-center">Gas Sensor Dashboard</h1>
     </div>
 </div>
@@ -46,33 +46,33 @@
 
 <!-- Row 3: Left box (2/3) and right box (1/3) with four vertically stacked boxes -->
 <div class="row">
-    <div class="col-8 bg-info text-white" id="map-container">
+    <div class="col-8 bg" id="map-container">
         {{ map_html|safe }}
     </div>
     <div class="col-4 bg-warning text-white">
         <div class="row">
-            <div class="col-12 bg-danger text-white">
+            <div class="col-12 bg text-white" style = 'background-color: #1C4E80;'>
                 <h3 class="text-center">Carbon Monoxide</h3>
                 <input type="range" class="form-control-range" id="carbonMonoxide" min="0" max="1000" step="10" value="50">
                 <p class="text-center"><span id="carbonMonoxideValue">50</span> ppm</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 bg-danger text-white">
+            <div class="col-12 bg text-white" style = 'background-color: #1C4E80;'>
                 <h3 class="text-center">Methane</h3>
                 <input type="range" class="form-control-range" id="methane" min="0" max="10000" step="10" value="1000">
                 <p class="text-center"><span id="methaneValue">1000</span> ppm</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 bg-danger text-white">
+            <div class="col-12 bg text-white" style = 'background-color: #1C4E80;'>
                 <h3 class="text-center">Air Quality</h3>
                 <input type="range" class="form-control-range" id="airquality" min="0" max="1000" step="10" value="200">
                 <p class="text-center"><span id="aqValue">200</span> ppm</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 bg-danger text-white">
+            <div class="col-12 bg text-white" style = 'background-color: #1C4E80;'>
                 <h3 class="text-center">Butane</h3>
                 <input type="range" class="form-control-range" id="butane" min="0" max="1600" step="10" value="700">
                 <p class="text-center"><span id="butaneValue">700</span> ppm</p>
