--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-3">
                 <div class="card">
                     <div class="card-body">
@@ -160,7 +160,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 <!-- </div> -->
 <script src="{{ url_for('static', filename='javascript/graphFunctions.js') }}" type='text/javascript'></script>
