--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,12 +31,12 @@
 <!-- <div style='width:900px;height:500px; background-color:white'> -->
     <div class="container mt-5" style = "max-width: fit-content;">
         <!-- Row 1: Sensor title -->
-        <div class="row title-row">
+        <!-- <div class="row title-row">
           <div class="col-12">
               <h1 class="heading text-center">Sensor 1</h1>
           </div>
       </div>
-        
+         -->
         <!-- Rows 2-5: 4 equally sized boxes -->
         <div class="row">
             <div class="col-3">
